syntax = "proto3";

option csharp_namespace = "Grpc.UserAuth";

service GrpcUserAuth {
	rpc LoginUser(UserLoginRequest) returns (UserLoginResponse);
}


message UserLoginRequest {
	string email = 1;
	string password = 2;
}

message UserLoginResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    AuthInfo authInfo = 4;
}

message AuthInfo {
	string Token = 1;
	string UserType = 2;
	string UserId = 3;
	bool EmailConfirmed = 4;
}